--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "clsx": "^1.1.1",
+    "date-fns": "^2.16.1",
     "next": "9.4.4",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
